crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__modify_only_group.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: all_groups_occupied
expression: out
---
  × failed to apply 1,6-Anhydro modification to residue 0 (N-Acetylmuramic
  │ Acid)
  ╰─▶   × no functional groups on residue 0 matching the target were free:
        │ "Hydroxyl" at="Reducing End" is modified
