crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__modify_only_groups-2.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: still_all_groups_occupied
expression: out
---
  × failed to apply Calcium Adduct modification to residue 12 (N-Acetylmuramic
  │ Acid)
  ╰─▶   × too few functional groups on residue 12 matching the target were
        │ free (1/2): "Carboxyl" at="Lactyl Ether" is free, "Hydroxyl" at="6-
        │ Position" is modified, "Hydroxyl" at="Nonreducing End" is modified,
        │ and "Hydroxyl" at="Reducing End" is modified
