crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__modify_only_groups.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: all_groups_occupied
expression: out
---
  × failed to apply Calcium Adduct modification to residue 12 (N-Acetylmuramic
  │ Acid)
  ╰─▶   × too few functional groups on residue 12 matching the target were
        │ free (1/4): "Carboxyl" at="Lactyl Ether" is free, "Hydroxyl" at="6-
        │ Position" is modified, "Hydroxyl" at="Nonreducing End" is modified,
        │ and "Hydroxyl" at="Reducing End" is modified
