crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__new_chain-2.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: nonexistent_bond
expression: out
---
  × the bond "?" could not be found in the supplied polymer database
