crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__new_chain-3.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: nonexistent_residue
expression: out
---
  × the residue "yE" could not be found in the supplied polymer database
