crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__new_modification-2.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: nonexistent_modification
expression: out
---
  × the modification "?" could not be found in the supplied polymer database
